Debug Vivado HLS project

--- a/multiclassifier/Makefile
+++ b/multiclassifier/Makefile
@@ -12,7 +12,7 @@ restore:
 .PHONY: restore
 
 ultraclean:
-	rm -rf hls4ml_prj
-	rm -f hls4ml_prj.tar.gz
+	rm -rf hls4ml*_prj
+	rm -f hls4ml*_prj.tar.gz
 	rm -rf __pycache__
 .PHONY: ultraclean
